[gd_scene load_steps=3 format=2]

[ext_resource path="res://scripts/damage area.gd" type="Script" id=1]
[ext_resource path="res://sprites/n area.png" type="Texture" id=2]

[node name="Player Area" type="Node2D"]
script = ExtResource( 1 )

[node name="Area" type="Sprite" parent="."]
modulate = Color( 0.984314, 0.121569, 0.121569, 1 )
position = Vector2( 0, 5 )
texture = ExtResource( 2 )

[node name="Area2D" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionPolygon2D" parent="Area2D"]
polygon = PoolVector2Array( 0, 11, 16, 2, 0, -7, -16, 2 )

[node name="Light2D" type="Light2D" parent="."]
position = Vector2( 0, 5 )
texture = ExtResource( 2 )

[connection signal="area_entered" from="Area2D" to="." method="_on_Area2D_area_entered"]
[connection signal="mouse_entered" from="Area2D" to="." method="_on_Area2D_mouse_entered"]
[connection signal="mouse_exited" from="Area2D" to="." method="_on_Area2D_mouse_exited"]
